# jemaro_days_2025

./: .gitignore  README.md
car_control/launch/: car_control.launch.py
car_control/script/: pure_pursuit.py
cone_detector/: CMakeLists.txt  package.xml
cone_detector/src/: 2bag_cone_detector_node.cpp  3bag_cone_detector_node.cpp  bag_cone_detector_node.cpp  cone_detector_node.cpp
cone_real/: CMakeLists.txt  package.xml
cone_real/src/: cone_detector_node.cpp  pose_tracker_node.cpp
osrf_car_demo/car_demo/rviz/: prius2.rviz
real_detector/: CMakeLists.txt  package.xml
real_detector/src/: real_detector_node.cpp
road_detection/: CMakeLists.txt  package.xml
road_detection/scripts/: road_detection.py
road_detection/src/: road_detection.cpp
